# expenses-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-no-nginx.yml  docker-compose.yml  nginx.conf  nginx.local.conf  prometheus.yml  pyproject.toml  start.py
.github/workflows/: cd.yaml.yml  cd.yml  ci.yaml.yml  ci.yml
alembic/: env.py
alembic/versions/: 2025_09_11_0948-b83c984e0cc6_create_users_table.py  2025_09_16_1959-5321a8099386_add_categories_table.py  2025_09_17_0006-1d6976baa0ea_.py  2025_09_17_1222-aa86c989cf0a_add_budget_table.py  2025_09_22_1903-48571e41a89d_add_last_refresh_jti_to_user_model.py  2025_09_23_0034-d4db0917f1a8_rename_field_active_to_email_verified.py  2025_09_27_0012-4ba89b2c2639_add_avatar_url_to_user_model.py  2025_09_29_1131-511150c5afb0_change_email_column.py
configs/: grafana-datasources.yaml  loki.yaml  prometheus.yml  promtail.yaml  tempo.yaml
configs/grafana-dashboards/: provider.yaml
configs/grafana-dashboards/json/: application-dashboard.json  loki-dashboard.json  postgres-dashboard.json  redis-dashboard.json  tempo-dashboard.json
expenses_tracker/: app.py
expenses_tracker/application/dto/: budget.py  category.py  expense.py  token.py  user.py
expenses_tracker/application/interfaces/: avatar_storage.py  cache_service.py  email_service.py  oauth_state_storage.py  password_hasher.py  token_service.py
expenses_tracker/application/use_cases/: auth.py  budget.py  category.py  expense.py  oauth.py  upload_avatar_use_cases.py  user.py
expenses_tracker/core/: constants.py  logger.py  settings.py
expenses_tracker/domain/: exceptions.py
expenses_tracker/domain/entities/: budget.py  category.py  expense.py  token_payload.py  user.py
expenses_tracker/domain/exceptions/: auth.py  budget.py  category.py  expense.py  user.py
expenses_tracker/domain/repositories/: budget.py  category.py  expense.py  uow.py  user.py
expenses_tracker/infrastructure/: di.py
expenses_tracker/infrastructure/api/: di.py  exception_handlers.py  main_router.py  middlewares.py  rate_limiter.py
expenses_tracker/infrastructure/cache/: dummy_cache_service.py  redis_cache_service.py
expenses_tracker/infrastructure/database/: db.py
expenses_tracker/infrastructure/monitoring/: metrics.py  opentelemetry.py  sentry.py
expenses_tracker/infrastructure/security/: bcrypt_password_hasher.py  fastapi_email_service.py  jwt_token_service.py  oauth_providers.py
expenses_tracker/routers/: main_router.py
frontend_build/: asset-manifest.json  index.html
tests/: conftest.py
tests/test_e2e/: conftest.py
tests/test_e2e/api/: conftest.py
tests/test_integration/: conftest.py
tests/test_unit/: conftest.py
(+79 files in other folders)
