[project]
name = "expenses-tracker"
version = "0.1.0"
description = "Expenses tracker API"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.11",
]

[tool.mypy]
exclude = 'tests/'

[tool.coverage.run]
source = ["src"]
omit = ["**/__pycache__/*"]
