[project]
name = "expenses-tracker"
version = "0.1.0"
description = "Expenses tracker API"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authlib>=1.6.4",
    "bcrypt>=4.3.0",
    "boto3>=1.40.40",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "orjson>=3.11.3",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.39.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
    "structlog-sentry>=2.2.1",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "boto3-stubs[essential]>=1.40.40",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "minio>=7.2.17",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.11",
    "testcontainers>=4.13.1",
    "types-authlib>=1.6.4.20250920",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
exclude = 'tests/'

[tool.coverage.run]
source = ["src"]
omit = ["**/__pycache__/*"]
